--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "yarn node index.js",
+    "start": "yarn node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
